k8s/mlflow_minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-minio
spec:
  # strategy:        #new
  #   type: Recreate #new
  replicas: 1 # NEW AKS
  selector:
    matchLabels:
      app: mlflow-minio
  template:
    metadata:
      labels:
        app: mlflow-minio
    spec:
      nodeSelector: # NEW AKS
        "kubernetes.io/os": linux # NEW AKS
      volumes:
        - name: mlflow-pvc-2
          persistentVolumeClaim:
            claimName: mlflow-pvc-2
      containers:
        - name: mlflow-minio
          image: minio/minio:RELEASE.2020-07-27T18-37-02Z #minio/minio:RELEASE.2021-04-18T19-26-29Z #minio/minio:RELEASE.2021-03-17T02-33-02Z
          imagePullPolicy: IfNotPresent #Always
          args:
            - server
            - /data
          volumeMounts:
            - name: mlflow-pvc-2
              mountPath: "/data"
          ports:
            - containerPort: 9000
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mlflow-minio
# spec:
#   type: LoadBalancer
#   ports:
#   - port: 9000
#     targetPort: 9000
#     protocol: TCP
#     name: http
#   selector:
#     app: mlflow-minio
apiVersion: v1
kind: Service
metadata:
  name: mlflow-minio-service
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
  selector:
    app: mlflow-minio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-minio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.il/add-base-url: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: mlflow-minio.local
      http:
        paths:
          - backend:
              service:
                name: mlflow-minio-service
                port:
                  number: 9000
            path: /
            pathType: Prefix
